--- a/src/App.css
+++ b/src/App.css
@@ -37,27 +37,5 @@
   }
 }
 
-.contact {
-  padding: 20px 50px 50px;
-  background-color: #777;
-  margin-bottom: 50px;
-}
 
-.form-block {
-  text-align: left;
-  width: 100%;
-  padding-right: 30px;
-  padding-bottom: 30px
-}
 
-.contact-details{
-  text-align: left;
-}
-
-.footer{
-  position: relative;
-  margin-top: -150px; /* negative value of footer height */
-  height: 150px;
-  clear:both;
-  padding-top:20px;
-}
